; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_set_autoedge.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_set_autoedge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstp_port = type { i32, %struct.TYPE_2__, %struct.bstp_state* }
%struct.TYPE_2__ = type { i64 }
%struct.bstp_state = type { i32 }

@BSTP_PORT_AUTOEDGE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bstp_set_autoedge(%struct.bstp_port* %0, i32 %1) #0 {
  %3 = alloca %struct.bstp_port*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bstp_state*, align 8
  store %struct.bstp_port* %0, %struct.bstp_port** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.bstp_port*, %struct.bstp_port** %3, align 8
  %7 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %6, i32 0, i32 2
  %8 = load %struct.bstp_state*, %struct.bstp_state** %7, align 8
  store %struct.bstp_state* %8, %struct.bstp_state** %5, align 8
  %9 = load %struct.bstp_state*, %struct.bstp_state** %5, align 8
  %10 = call i32 @BSTP_LOCK(%struct.bstp_state* %9)
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %29

13:                                               ; preds = %2
  %14 = load i32, i32* @BSTP_PORT_AUTOEDGE, align 4
  %15 = load %struct.bstp_port*, %struct.bstp_port** %3, align 8
  %16 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 8
  %19 = load %struct.bstp_port*, %struct.bstp_port** %3, align 8
  %20 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %13
  %25 = load %struct.bstp_state*, %struct.bstp_state** %5, align 8
  %26 = load %struct.bstp_port*, %struct.bstp_port** %3, align 8
  %27 = call i32 @bstp_edge_delay_expiry(%struct.bstp_state* %25, %struct.bstp_port* %26)
  br label %28

28:                                               ; preds = %24, %13
  br label %36

29:                                               ; preds = %2
  %30 = load i32, i32* @BSTP_PORT_AUTOEDGE, align 4
  %31 = xor i32 %30, -1
  %32 = load %struct.bstp_port*, %struct.bstp_port** %3, align 8
  %33 = getelementptr inbounds %struct.bstp_port, %struct.bstp_port* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = and i32 %34, %31
  store i32 %35, i32* %33, align 8
  br label %36

36:                                               ; preds = %29, %28
  %37 = load %struct.bstp_state*, %struct.bstp_state** %5, align 8
  %38 = call i32 @BSTP_UNLOCK(%struct.bstp_state* %37)
  ret i32 0
}

declare dso_local i32 @BSTP_LOCK(%struct.bstp_state*) #1

declare dso_local i32 @bstp_edge_delay_expiry(%struct.bstp_state*, %struct.bstp_port*) #1

declare dso_local i32 @BSTP_UNLOCK(%struct.bstp_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
